@@ -24,9 +24,9 @@ public class ArcanumMine extends Building implements Buildable {
 		super(c);
 
 		iconImg = standImg;
-		stand = new Extract(standImg, 100);
-		build = new Build(standImg, 100);
-		death = new Death(standImg, 100);
+		stand = new Extract(standImg, 1000);
+		build = new Build(standImg, 1000);
+		death = new Death(standImg, 1000);
 
 		animation = nextAnimation = stand;
 		// ************************************
