@@ -23,7 +23,7 @@ public class PrunamHarvester extends Building implements Buildable {
 		super(c);
 
 		iconImg = standImg;
-		stand = new Extract(standImg, 100);
+		stand = new Extract(standImg, 1000);
 		build = new Build(standImg, 4000);
 		death = new Death(standImg, 100);
 
